<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="?attr/actionBarSize"
    tools:context=".ui.global.GlobalFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/text_country_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/global_summary"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/pie_chart_global"
                android:layout_width="240dp"
                android:layout_height="240dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_country_title" />

            <io.github.omisie11.coronatracker.util.SingleStatView
                android:id="@+id/stat_recovered"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:icon="@drawable/ic_favorite_24dp"
                app:iconColor="@color/pie_chart_green"
                app:layout_constraintBottom_toBottomOf="@+id/stat_confirmed"
                app:layout_constraintEnd_toStartOf="@+id/stat_confirmed"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/stat_confirmed"
                app:statValue="@string/number_blank"
                app:title="@string/recovered"
                tools:text="29132" />

            <io.github.omisie11.coronatracker.util.SingleStatView
                android:id="@+id/stat_confirmed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="24dp"
                app:icon="@drawable/ic_caution_24dp"
                app:iconColor="@color/pie_chart_yellow"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/stat_deaths"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/stat_recovered"
                app:layout_constraintTop_toBottomOf="@+id/pie_chart_global"
                app:statValue="@string/number_blank"
                app:title="@string/confirmed"
                tools:text="32133" />

            <io.github.omisie11.coronatracker.util.SingleStatView
                android:id="@+id/stat_deaths"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:icon="@drawable/ic_emoticon_death_24dp"
                app:iconColor="@color/pie_chart_red"
                app:layout_constraintBottom_toBottomOf="@+id/stat_confirmed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/stat_confirmed"
                app:layout_constraintTop_toTopOf="@+id/stat_confirmed"
                app:statValue="@string/number_blank"
                app:title="@string/deaths"
                tools:text="2132" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>