<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/general_settings">

        <ListPreference
            android:defaultValue="3"
            android:dialogTitle="@string/settings_refresh_interval_dialog_title"
            android:entries="@array/settings_refresh_interval_entries"
            android:entryValues="@array/settings_refresh_interval_values"
            android:key="prefs_refresh_interval"
            android:summary="%s"
            android:title="@string/settings_refresh_interval_title" />

        <SwitchPreference
            android:key="prefs_app_theme"
            android:title="@string/settings_dark_mode_title"
            android:summaryOn="@string/settings_dark_mode_summary_on"
            android:summaryOff="@string/settings_dark_mode_summary_off"
            android:defaultValue="false"/>

    </PreferenceCategory>

    <PreferenceCategory android:title="Location">

        <ListPreference
            android:defaultValue="Poland"
            android:dialogTitle="@string/choose_your_country"
            android:key="chosen_location"
            android:title="@string/country_showed_in_local_tab" />

    </PreferenceCategory>

</PreferenceScreen>